--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 /* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
+
+/*
+Pantone Color:
+#e4d6f9
+#aba2d9
+#a07eba
+#5f4d9f
+#1e0137
+
  */
 
 nav ul a,
